@@ -1,5 +1,6 @@
 Date	Added
 12/14
+	* Added a busy animation for npc loading [MC Cameri]
 	* Replaced the way map loading was displayed into a progress-like way [MC Cameri]
 	* Fixed some typos in _ShowMessage() [MC Cameri]
 	* Replaced lots of more printf's in map-server with _ShowMessage() [MC Cameri]
